--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <section class="game-container">
+        <h2 class="moves">Moves: <span></span></h2>
     </section>
 
     <script src="js/app.js"></script>
