Build game structure

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 
     <section class="game-container">
+        <ul class="cards">
+            
+        </ul>
     </section>
 
     <script src="js/app.js"></script>
