Add 'moves' count to the page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
     <section class="game-container">
+        <h2>Moves: <span class="moves">--</span></h2>
         <ul class="cards">
 
         </ul>
