bug: The 'modal' doesn't appear [ Solved ]

--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 <body>
 
     <section class="game-container">
+        <div class="modal">
+            <div class="inner">
+                <h2>Congratulations!</h2>
+                <p>You have a great memory.</p>
+                <button id="repeat">Play Again?</button>
+            </div>
+        </div>
         <ul class="cards">
-            <p>You have a great memory.</p>
-            <button id="repeat">Play Again?</button>
+            
         </div>
 
     </div>
