--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
     <section class="game-container">
+        <h2>Moves: <span class="moves">--</span></h2>
         <div class="modal">
             <div class="inner">
                 <h2>Congratulations!</h2>
