--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="inner">
                 <h2>Congratulations!</h2>
                 <p>You have a great memory.</p>
+                <p>It tooks you: <span id="total_moves"></span> moves in <span id="total_time"></span> seconds!</p>
                 <button id="repeat">Play Again?</button>
             </div>
         </div>
