--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 
     <section class="game-container">
+        <h1>Memory Game</h1>
         <h2>Moves: <span class="moves">--</span></h2>
         <div class="modal">
             <div class="inner">
