Delete the 'Timer' functionalities
There are some tweaks within it, this feature will be posponed untill the main functionalities being completed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="inner">
                 <h2>Congratulations!</h2>
                 <p>You have a great memory.</p>
-                <p>It tooks you: <span id="total_moves"></span> moves in <span id="total_time"></span> seconds!</p>
+                <p>It tooks you: <span id="total_moves"></span> moves to complete it!</p>
                 <button id="repeat">Play Again?</button>
             </div>
         </div>
