Add 'Play Again' button

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
     <section class="game-container">
         <h1>Memory Game</h1>
-        <h2>Moves: <span class="moves">--</span></h2>
+        <h2 class="options">Moves: <span class="moves">--</span> <i class="play-again fas fa-redo"></i></h2>
         <div class="modal">
             <div class="inner">
                 <h2>Congratulations!</h2>
                 <p>You have a great memory.</p>
                 <p>It tooks you: <span id="total_moves"></span> moves to complete it!</p>
-                <button id="repeat">Play Again?</button>
+                <button class="play-again">Play Again?</button>
             </div>
         </div>
         <ul class="cards">
