structure: Add the 'features' section

--- a/index.html
+++ b/index.html
@@ -16,22 +16,30 @@
 
     <section class="game-container">
         <h1>Memory Game</h1>
-        <h2 class="options">Moves: <span class="moves">--</span> <i class="play-again fas fa-redo"></i></h2>
+        <div class="features">
+            <div class="moves-count">
+                Moves: <span class="moves">--</span>
+            </div>
+            <div class="repeat">
+                <i class="play-again fas fa-redo"></i>
+            </div>
+        </div>
         <div class="modal">
             <div class="inner">
                 <h2>Congratulations!</h2>
                 <p>You have a great memory.</p>
-                <p>It tooks you: <span id="total_moves"></span> moves to complete it!</p>
+                <p>It tooks you:
+                    <span id="total_moves"></span> moves to complete it!</p>
                 <button class="play-again">Play Again?</button>
             </div>
         </div>
         <ul class="cards">
-            
+
         </ul>
 
-    </div>
+        </div>
 
-    <script src="js/app.js"></script>
+        <script src="js/app.js"></script>
 </body>
 
 </html>
