--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <div class="moves-count">
                 Moves: <span class="moves">--</span>
             </div>
+            <div class="stars-rating">
+                <i class="star fas fa-star"></i>
+                <i class="star fas fa-star"></i>
+                <i class="star fas fa-star"></i>
+            </div>
             <div class="repeat">
                 <i class="play-again fas fa-redo"></i>
             </div>
@@ -29,7 +34,12 @@
                 <h2>Congratulations!</h2>
                 <p>You have a great memory.</p>
                 <p>It tooks you:
-                    <span id="total_moves"></span> moves to complete it!</p>
+                    <span id="total_moves"></span> moves to complete it!<br>
+                    Your rating is: <span id="total_rate"></span>
+                </p>
+                <p>
+                    Well done!! <i class="fas fa-trophy"></i>
+                </p>
                 <button class="play-again">Play Again?</button>
             </div>
         </div>
