feat: Add 'Timer'
This includes:
- HTML Structure
- JS Functionality

Tested: DONE!

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <div class="moves-count">
                 Moves: <span class="moves">--</span>
             </div>
+            <div class="timer-container">
+                <i class="far fa-clock"></i> <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
+            </div>
             <div class="stars-rating">
                 <i class="star fas fa-star"></i>
                 <i class="star fas fa-star"></i>
@@ -33,6 +36,7 @@
             <div class="inner">
                 <h2>Congratulations!</h2>
                 <p>You have a great memory.</p>
+                <p>In <span id="totalHours"></span> Hours, <span id="totalMinutes"></span> Minutes and <span id="totalSeconds"></span> Seconds</p>
                 <p>It tooks you:
                     <span id="total_moves"></span> moves to complete it!<br>
                     Your rating is: <span id="total_rate"></span>
